Добавляет папки для картинок в разных форматах

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Дизайн-студия «Нёрдс»</title>
-  <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
+  <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
   <header class="main-header">
     <nav>
       <a>
-        <img src="img/nerds-logo.png" width="160" height="65" alt="">
+        <img src="img/svg/nerds-logo.svg" width="160" height="66" alt="">
       </a>
       <ul>
         <li><a href="index.html">Студия</a></li>
@@ -58,7 +59,7 @@
         <li>
           <h3>Веб-сайты</h3>
           <p>
-            <img src="img/illustration-1.jpg" alt="" width="300" height="146">
+            <img src="img/png/illustration-1.png" alt="" width="300" height="146">
           </p>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a href="blank.html">Заказать</a>
@@ -66,7 +67,7 @@
         <li>
           <h3>Приложения</h3>
           <p>
-            <img src="img/illustration-2.jpg" alt="" width="300" height="146">
+            <img src="img/png/illustration-2.png" alt="" width="300" height="146">
           </p>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a href="blank.html">Заказать</a>
@@ -74,7 +75,7 @@
         <li>
           <h3>Презентации</h3>
           <p>
-            <img src="img/illustration-3.jpg" alt="" width="300" height="146">
+            <img src="img/png/illustration-3.png" alt="" width="300" height="146">
           </p>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a href="blank.html">Заказать</a>
@@ -94,7 +95,7 @@
         <li>Слайдшоу и видео для корпоративных презентаций</li>
       </ul>
       <h3>Наша статистика</h3>
-      <img src="img/nerds-illustration.jpg" alt="" width="360" height="208">
+      <img src="img/jpg/nerds-illustration.jpg" alt="" width="360" height="208">
       <table>
         <caption>с 2004 года Любим точность во всем:</caption>
         <tr>
@@ -115,22 +116,22 @@
       <ul>
         <li>
           <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
-            <img src="img/logo-htmlacademy.png" alt="" width="199" height="57">
+            <img src="img/svg/logo-htmlacademy.svg" alt="" width="199" height="58">
           </a>
         </li>
         <li>
           <a href="blank.html">
-            <img src="img/logo-borodinski.jpg" alt="" width="209" height="90">
+            <img src="img/svg/logo-borodinski.svg" alt="" width="209" height="90">
           </a>
         </li>
         <li>
           <a href="blank.html">
-            <img src="img/logo-pink.png" alt="" width="185" height="52">
+            <img src="img/svg/logo-pink.svg" alt="" width="185" height="52">
           </a>
         </li>
         <li>
           <a href="blank.html">
-            <img src="img/logo-mishka.png" alt="" width="173" height="84">
+            <img src="img/svg/logo-mishka.svg" alt="" width="173" height="84">
           </a>
         </li>
       </ul>
@@ -142,7 +143,7 @@
     <section>
       <h2>Контакты</h2>
       <!-- Здесь будет карта -->
-      <img src="img/map.jpg" alt="" width="1440" height="416">
+      <img src="img/png/map.png" alt="" width="1440" height="416">
       <p>NЁRDS DESIGN STUDIO</p>
       <p>
         наб. Реки Карповки, 5 лит П, Санкт-Петербург
