--- a/blank.html
+++ b/blank.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <title>Дизайн-студия «Нёрдс»</title>
   <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
@@ -12,7 +15,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="img/nerds-logo.png" width="160" height="65" alt="">
+        <img src="img/svg/nerds-logo.svg" width="160" height="66" alt="">
       </a>
       <ul>
         <li><a href="index.html">Студия</a></li>
@@ -33,7 +36,7 @@
     <section>
       <h2>Контакты</h2>
       <!-- Здесь будет карта -->
-      <img src="img/map.jpg" alt="" width="1440" height="416">
+      <img src="img/png/map.png" alt="" width="1440" height="416">
       <p>NЁRDS DESIGN STUDIO</p>
       <p>
         наб. Реки Карповки, 5 лит П, Санкт-Петербург
