--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Дизайн-студия «Нёрдс»</title>
-  <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
@@ -12,7 +15,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="img/nerds-logo.png" width="160" height="65" alt="">
+        <img src="img/svg/nerds-logo.svg" width="160" height="66" alt="">
       </a>
       <ul>
         <li><a href="index.html">Студия</a></li>
@@ -122,7 +125,7 @@
       <ul>
         <li>
           <a href="blank.html">
-            <img src="img/img-sedona.jpg" alt="" width="358" height="578">
+            <img src="img/catalog/img-sedona.jpg" alt="" width="358" height="577">
             <div>
               <h3>Sedona</h3>
               <p>Информационный сайт для туристов</p>
@@ -132,7 +135,7 @@
         </li>
         <li>
           <a href="blank.html">
-            <img src="img/img-pink.jpg" alt="" width="358" height="578">
+            <img src="img/catalog/img-pink.jpg" alt="" width="358" height="578">
             <div>
               <h3>Pink App</h3>
               <p>Продуктовый лендинг<br>приложения для iOS и Android</p>
@@ -142,7 +145,7 @@
         </li>
         <li>
           <a href="blank.html">
-            <img src="img/img-barbershop.jpg" alt="" width="358" height="578">
+            <img src="img/catalog/img-barbershop.jpg" alt="" width="358" height="578">
             <div>
               <h3>Barbershop</h3>
               <p>Сайт салона красоты.<br>Для мужчин, да.</p>
@@ -152,7 +155,7 @@
         </li>
         <li>
           <a href="blank.html">
-            <img src="img/img-mishka.jpg" alt="" width="358" height="578">
+            <img src="img/catalog/img-mishka.jpg" alt="" width="358" height="578">
             <div>
               <h3>Mishka</h3>
               <p>Интернет-магазин вязаных игрушек</p>
@@ -162,7 +165,7 @@
         </li>
         <li>
           <a href="blank.html">
-            <img src="img/img-aplus.jpg" alt="" width="358" height="578">
+            <img src="img/catalog/img-aplus.jpg" alt="" width="358" height="578">
             <div>
               <h3>A Plus</h3>
               <p>Лендинг курсов повышения квалификации</p>
@@ -172,7 +175,7 @@
         </li>
         <li>
           <a href="blank.html">
-            <img src="img/img-kvast.jpg" alt="" width="358" height="578">
+            <img src="img/catalog/img-kvast.jpg" alt="" width="358" height="578">
             <div>
               <h3>Кваст</h3>
               <p>Промо-сайт производителя<br>крафтового кваса</p>
@@ -208,15 +211,15 @@
     <section>
       <h2>Контакты</h2>
       <!-- Здесь будет карта -->
-      <img src="img/map.jpg" alt="" width="1440" height="416">
-      <p>NЁRDS DESIGN STUDIO</p>
-      <p>
-        наб. Реки Карповки, 5 лит П, Санкт-Петербург
-      </p>
-      <p>
-        <a href="tel:+78005558628">+7 800 555-86-28</a>
-      </p>
-      <button type="button">Напишите нам</button>
+      <<img src="img/png/map.png" alt="" width="1440" height="416">
+        <p>NЁRDS DESIGN STUDIO</p>
+        <p>
+          наб. Реки Карповки, 5 лит П, Санкт-Петербург
+        </p>
+        <p>
+          <a href="tel:+78005558628">+7 800 555-86-28</a>
+        </p>
+        <button type="button">Напишите нам</button>
     </section>
 
     <section>
