--- a/index.html
+++ b/index.html
@@ -1,102 +1,113 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>Дизайн-студия «Нёрдс»</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 
-<body>
+<body class="page-body">
 
   <header class="main-header">
-    <nav>
-      <a>
+    <nav class="main-navigation">
+      <a class="main-header-logo">
         <img src="img/svg/nerds-logo.svg" width="160" height="66" alt="">
       </a>
-      <ul>
+      <ul class="site-navigation">
         <li><a href="index.html">Студия</a></li>
         <li><a href="blank.html">Клиенты</a></li>
         <li><a href="catalog.html">Магазин</a></li>
         <li><a href="blank.html">Контакты</a></li>
       </ul>
       <!-- Тут иконка для корзины -->
-      <a href="blank.html">Корзина</a>
+      <ul class="user-navigation">
+        <li><a class="cart-icon" href="blank.html">Корзина</a></li>
+      </ul>
     </nav>
 
-    <h1>Дизайн-студия «Нёрдс»</h1>
+    <h1 class="visually-hidden">Дизайн-студия «Нёрдс»</h1>
 
-    <section>
-      <h2>Преимущества</h2>
+    <section class="slider">
+      <h2 class="visually-hidden">Преимущества</h2>
       <!-- Тут ниже слайдер -->
-      <ul>
-        <li>
+      <ul class="slider-list">
+        <li class="slider-item">
           <h3>Долго, дорого, скрупулезно.</h3>
           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a href="blank.html">Узнать больше</a>
+          <a class="button" href="blank.html">Узнать больше</a>
         </li>
-        <li>
+        <li class="slider-item">
           <h3>Любим математику как никто другой.</h3>
           <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-          <a href="blank.html">Узнать больше</a>
+          <a class="button" href="blank.html">Узнать больше</a>
         </li>
-        <li>
+        <li class="slider-item">
           <h3>Только ночь, только хардкор</h3>
           <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-          <a href="blank.html">Узнать больше</a>
+          <a class="button" href="blank.html">Узнать больше</a>
         </li>
       </ul>
+      <div class="slider-controls">
+        <button type="button" class="current"><span class="visually-hidden">Первый слайд</span></button>
+        <button type="button"><span class="visually-hidden">Второй слайд</span></button>
+        <button type="button"><span class="visually-hidden">Третий слайд</span></button>
+      </div>
     </section>
   </header>
 
-  <main>
-    <section>
-      <h2>Услуги</h2>
-      <ul>
-        <li>
+  <main class="container">
+    <section class="services">
+      <h2 class="visually-hidden">Услуги</h2>
+      <ul class="services-list">
+        <li class="services-item">
           <h3>Веб-сайты</h3>
           <p>
             <img src="img/png/illustration-1.png" alt="" width="300" height="146">
           </p>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a href="blank.html">Заказать</a>
+          <a class="button" href="blank.html">Заказать</a>
         </li>
-        <li>
+        <li class="services-item">
           <h3>Приложения</h3>
           <p>
             <img src="img/png/illustration-2.png" alt="" width="300" height="146">
           </p>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a href="blank.html">Заказать</a>
+          <a class="button button-green" href="blank.html">Заказать</a>
         </li>
-        <li>
+        <li class="services-item">
           <h3>Презентации</h3>
           <p>
             <img src="img/png/illustration-3.png" alt="" width="300" height="146">
           </p>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a href="blank.html">Заказать</a>
+          <a class="button button yellow" href="blank.html">Заказать</a>
         </li>
       </ul>
     </section>
 
-    <section>
-      <h2>О студии</h2>
-      <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
+    <section class="about-us">
+      <h2 class="visually-hidden">О студии</h2>
+      <p class="about-us-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+      <p class="about-us-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
+        Работаем не покладая
         рук, как роботы.</p>
-      <p>Выполняем заказы на разработку:</p>
-      <ul>
+      <p class="about-us-list-title">Выполняем заказы на разработку:</p>
+      <ul class="about-us-list">
         <li>Веб-сайтов любой сложности</li>
         <li>Мобильных приложений для iOS и Android</li>
         <li>Слайдшоу и видео для корпоративных презентаций</li>
       </ul>
-      <h3>Наша статистика</h3>
+      <h3 class="visually-hidden">Наша статистика</h3>
       <img src="img/jpg/nerds-illustration.jpg" alt="" width="360" height="208">
-      <table>
+      <table class="about-us-table">
         <caption>с 2004 года Любим точность во всем:</caption>
         <tr>
           <td>146<sup>%</sup></td>
@@ -111,85 +122,85 @@
       </table>
     </section>
 
-    <section>
-      <h2>Партнеры</h2>
-      <ul>
-        <li>
+    <section class="partners">
+      <h2 class="visually-hidden">Партнеры</h2>
+      <ul class="partners-list">
+        <li class="partners-list-item">
           <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
             <img src="img/svg/logo-htmlacademy.svg" alt="" width="199" height="58">
           </a>
         </li>
-        <li>
+        <li class="partners-list-item">
           <a href="blank.html">
-            <img src="img/svg/logo-borodinski.svg" alt="" width="209" height="90">
+            <img src="img/png/logo-borodinski.png" alt="" width="209" height="90">
           </a>
         </li>
-        <li>
+        <li class="partners-list-item">
           <a href="blank.html">
-            <img src="img/svg/logo-pink.svg" alt="" width="185" height="52">
+            <img src="img/png/logo-pink.png" alt="" width="185" height="52">
           </a>
         </li>
-        <li>
+        <li class="partners-list-item">
           <a href="blank.html">
-            <img src="img/svg/logo-mishka.svg" alt="" width="173" height="84">
+            <img src="img/png/logo-mishka.png" alt="" width="173" height="84">
           </a>
         </li>
       </ul>
     </section>
   </main>
 
-  <footer class="main-footer">
+  <footer class="page-footer main-footer">
 
-    <section>
-      <h2>Контакты</h2>
+    <section class="contacts">
+      <h2 class="visually-hidden">Контакты</h2>
       <!-- Здесь будет карта -->
       <img src="img/png/map.png" alt="" width="1440" height="416">
-      <p>NЁRDS DESIGN STUDIO</p>
-      <p>
+      <p class="contacts-title">NЁRDS DESIGN STUDIO</p>
+      <p class="contacts-address">
         наб. Реки Карповки, 5 лит П, Санкт-Петербург
       </p>
       <p>
-        <a href="tel:+78005558628">+7 800 555-86-28</a>
+        <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
       </p>
-      <button type="button">Напишите нам</button>
+      <button class="button" type="button">Напишите нам</button>
     </section>
 
-    <section>
-      <h2>Мы в социальных сетях</h2>
-      <ul>
+    <section class="social">
+      <h2 class="visually-hidden">Мы в социальных сетях</h2>
+      <ul class="social-list">
         <li>
-          <a href="blank.html">Вконтакте</a>
+          <a class="social-button" href="blank.html"><span class="visually-hidden">Вконтакте</span></a>
         </li>
         <li>
-          <a href="blank.html">Фейсбук</a>
+          <a class="social-button" href="blank.html"><span class="visually-hidden">Фейсбук</span></a>
         </li>
         <li>
-          <a href="blank.html">Инстаграм</a>
+          <a class="social-button" href="blank.html"><span class="visually-hidden">Инстаграм</span></a>
         </li>
       </ul>
-      <p>Давайте дружить, это выгодно!</p>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
+      <p class="social-title">Давайте дружить, это выгодно!</p>
+      <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
     </section>
   </footer>
 
-  <section>
+  <section class="modal">
     <h2>Напишите нам</h2>
-    <form action="https://echo.htmlacademy.ru" method="post">
-      <div>
+    <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+      <div class="modal-item">
         <label for="name">Ваше имя:</label>
         <input id="name" type="text" name="name" placeholder="Имя Фамилия">
       </div>
-      <div>
+      <div class="modal-item">
         <label for="email">Ваш e-mail:</label>
         <input id="email" type="email" name="email" placeholder="email@example.com">
       </div>
-      <div>
+      <div class="modal-item">
         <label for="message">Текст письма:</label>
         <textarea id="message" name="message" placeholder="В свободной форме"></textarea>
       </div>
-      <button type="submit">Отправить</button>
+      <button class="button" type="submit">Отправить</button>
     </form>
-    <button type="button">Закрыть</button>
+    <button class="modal-close" type="button">Закрыть</button>
   </section>
 
 </body>
