--- a/catalog.html
+++ b/catalog.html
@@ -1,113 +1,118 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>Дизайн-студия «Нёрдс»</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 
-<body>
+<body class="page-body">
 
-  <header>
-    <nav>
-      <a href="index.html">
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
         <img src="img/svg/nerds-logo.svg" width="160" height="66" alt="">
       </a>
-      <ul>
+      <ul class="site-navigation">
         <li><a href="index.html">Студия</a></li>
         <li><a href="blank.html">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
+        <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
         <li><a href="blank.html">Контакты</a></li>
       </ul>
       <!-- Тут иконка для корзины -->
-      <a href="blank.html">Корзина</a>
+      <ul class="user-navigation">
+        <li><a class="cart-icon" href="blank.html">Корзина</a></li>
+      </ul>
     </nav>
 
-    <h1>Магазин готовых шаблонов</h1>
+    <h1 class="title-catalog">Магазин готовых шаблонов</h1>
 
   </header>
 
-  <main>
+  <main class="container-catalog">
 
-    <section>
-      <h2>Фильтр шаблонов</h2>
-      <form method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
+    <section class="filter">
+      <h2 class="visually-hidden">Фильтр шаблонов</h2>
+      <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
+        <fieldset class="filter-price">
           <legend>Стоимость:</legend>
           <!-- Тут элемент с ползунками, который потом будет красиво нарисован -->
           <div>
             <label>От
-              <input type="number" name="min-price" placeholder="0" value="0">
+              <input type="number" name="min-price" value="0">
             </label>
             <label>До
-              <input type="number" name="max-price" placeholder="15000" value="15000">
+              <input type="number" name="max-price" value="15000">
             </label>
           </div>
         </fieldset>
-        <fieldset>
+        <fieldset class="filter-grid">
           <legend>Сетка:</legend>
-          <ul>
-            <li>
+          <ul class="grid-list">
+            <li class="grid-list-item">
               <label>Адаптивная
                 <input type="radio" name="grid" value="adaptive" checked>
               </label>
             </li>
-            <li>
+            <li class="grid-list-item">
               <label>Фиксированная
                 <input type="radio" name="grid" value="fixed">
               </label>
             </li>
-            <li>
+            <li class="grid-list-item">
               <label>Резиновая
                 <input type="radio" name="grid" value="fluid">
               </label>
             </li>
           </ul>
         </fieldset>
-        <fieldset>
+        <fieldset class="filter-features">
           <legend>Особенности:</legend>
-          <ul>
-            <li>
+          <ul class="features-list">
+            <li class="features-list-item">
               <label>Слайдер
                 <input type="checkbox" name="slider" checked>
               </label>
             </li>
-            <li>
+            <li class="features-list-item">
               <label>Блок преимуществ
                 <input type="checkbox" name="advantages">
               </label>
             </li>
-            <li>
+            <li class="features-list-item">
               <label>Новости
                 <input type="checkbox" name="news" checked>
               </label>
             </li>
-            <li>
+            <li class="features-list-item">
               <label>Галерея
                 <input type="checkbox" name="gallery">
               </label>
             </li>
-            <li>
+            <li class="features-list-item">
               <label>Корзина
                 <input type="checkbox" name="cart">
               </label>
             </li>
           </ul>
         </fieldset>
-        <button type="submit">Показать</button>
+        <button class="button button-catalog" type="submit">Показать</button>
       </form>
     </section>
 
-    <section>
-      <h2>Каталог шаблонов</h2>
-      <p>Сортировать:</p>
-      <ul>
-        <li>
-          <a href="blank.html">По цене</a>
+    <section class="templates">
+      <h2 class="visually-hidden">Каталог шаблонов</h2>
+      <p class="sorting">Сортировать:</p>
+      <ul class="sorting-list">
+        <li class="sorting-list-current">
+          <a>По цене</a>
         </li>
         <li>
           <a href="blank.html">По типу</a>
@@ -116,88 +121,88 @@
           <a href="blank.html">По названию</a>
         </li>
         <li>
-          <a href="blank.html">По убыванию</a>
+          <a href="blank.html"><span class="visually-hidden">По убыванию</span></a>
         </li>
         <li>
-          <a href="blank.html">По возрастанию</a>
+          <a href="blank.html"><span class="visually-hidden">По возрастанию</span></a>
         </li>
       </ul>
-      <ul>
-        <li>
+      <ul class="templates-list">
+        <li class="templates-item">
           <a href="blank.html">
             <img src="img/catalog/img-sedona.jpg" alt="" width="358" height="577">
             <div>
               <h3>Sedona</h3>
-              <p>Информационный сайт для туристов</p>
-              <p>9 900 ₽</p>
+              <p class="templates-item-description">Информационный сайт для туристов</p>
+              <p class="button">9 900 ₽</p>
             </div>
           </a>
         </li>
-        <li>
+        <li class="templates-item">
           <a href="blank.html">
             <img src="img/catalog/img-pink.jpg" alt="" width="358" height="578">
-            <div>
+            <div class="templates-item-description">
               <h3>Pink App</h3>
-              <p>Продуктовый лендинг<br>приложения для iOS и Android</p>
-              <p>9 900 ₽</p>
+              <p class="templates-item-description">Продуктовый лендинг<br>приложения для iOS и Android</p>
+              <p class="button">9 900 ₽</p>
             </div>
           </a>
         </li>
-        <li>
+        <li class="templates-item">
           <a href="blank.html">
             <img src="img/catalog/img-barbershop.jpg" alt="" width="358" height="578">
             <div>
               <h3>Barbershop</h3>
-              <p>Сайт салона красоты.<br>Для мужчин, да.</p>
-              <p>9 900 ₽</p>
+              <p class="templates-item-description">Сайт салона красоты.<br>Для мужчин, да.</p>
+              <p class="button">9 900 ₽</p>
             </div>
           </a>
         </li>
-        <li>
+        <li class="templates-item">
           <a href="blank.html">
             <img src="img/catalog/img-mishka.jpg" alt="" width="358" height="578">
             <div>
               <h3>Mishka</h3>
-              <p>Интернет-магазин вязаных игрушек</p>
-              <p>9 900 ₽</p>
+              <p class="templates-item-description">Интернет-магазин вязаных игрушек</p>
+              <p class="button">9 900 ₽</p>
             </div>
           </a>
         </li>
-        <li>
+        <li class="templates-item">
           <a href="blank.html">
             <img src="img/catalog/img-aplus.jpg" alt="" width="358" height="578">
             <div>
               <h3>A Plus</h3>
-              <p>Лендинг курсов повышения квалификации</p>
-              <p>9 900 ₽</p>
+              <p class="templates-item-description">Лендинг курсов повышения квалификации</p>
+              <p class="button">9 900 ₽</p>
             </div>
           </a>
         </li>
-        <li>
+        <li class="templates-item">
           <a href="blank.html">
             <img src="img/catalog/img-kvast.jpg" alt="" width="358" height="578">
             <div>
               <h3>Кваст</h3>
-              <p>Промо-сайт производителя<br>крафтового кваса</p>
-              <p>9 900 ₽</p>
+              <p class="templates-item-description">Промо-сайт производителя<br>крафтового кваса</p>
+              <p class="button">9 900 ₽</p>
             </div>
           </a>
         </li>
       </ul>
 
-      <nav>
-        <ul>
-          <li>
-            <a>1</a>
+      <nav class="pagination-navigation">
+        <ul class="pagination-list">
+          <li class="pagination-item button-pagination-current">
+            <a class="button button-catalog">1</a>
           </li>
-          <li>
-            <a href="blank.html">2</a>
+          <li class="pagination-item">
+            <a class="button button-catalog" href="blank.html">2</a>
           </li>
-          <li>
-            <a href="blank.html">3</a>
+          <li class="pagination-item">
+            <a class="button button-catalog" href="blank.html">3</a>
           </li>
-          <li>
-            <a href="blank.html">Следующая</a>
+          <li class="pagination-item">
+            <a class="button button-catalog" href="blank.html">Следующая</a>
           </li>
         </ul>
       </nav>
@@ -206,58 +211,58 @@
 
   </main>
 
-  <footer class="main-footer">
+  <footer class="page-footer main-footer">
 
-    <section>
-      <h2>Контакты</h2>
+    <section class="contacts">
+      <h2 class="visually-hidden">Контакты</h2>
       <!-- Здесь будет карта -->
-      <<img src="img/png/map.png" alt="" width="1440" height="416">
-        <p>NЁRDS DESIGN STUDIO</p>
-        <p>
-          наб. Реки Карповки, 5 лит П, Санкт-Петербург
-        </p>
-        <p>
-          <a href="tel:+78005558628">+7 800 555-86-28</a>
-        </p>
-        <button type="button">Напишите нам</button>
+      <img src="img/png/map.png" alt="" width="1440" height="416">
+      <p class="contacts-title">NЁRDS DESIGN STUDIO</p>
+      <p class="contacts-address">
+        наб. Реки Карповки, 5 лит П, Санкт-Петербург
+      </p>
+      <p>
+        <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+      </p>
+      <button class="button" type="button">Напишите нам</button>
     </section>
 
-    <section>
-      <h2>Мы в социальных сетях</h2>
-      <ul>
+    <section class="social">
+      <h2 class="visually-hidden">Мы в социальных сетях</h2>
+      <ul class="social-list">
         <li>
-          <a href="blank.html">Вконтакте</a>
+          <a class="social-button" href="blank.html"><span class="visually-hidden">Вконтакте</span></a>
         </li>
         <li>
-          <a href="blank.html">Фейсбук</a>
+          <a class="social-button" href="blank.html"><span class="visually-hidden">Фейсбук</span></a>
         </li>
         <li>
-          <a href="blank.html">Инстаграм</a>
+          <a class="social-button" href="blank.html"><span class="visually-hidden">Инстаграм</span></a>
         </li>
       </ul>
-      <p>Давайте дружить, это выгодно!</p>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
+      <p class="social-title">Давайте дружить, это выгодно!</p>
+      <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
     </section>
   </footer>
 
-  <section>
+  <section class="modal">
     <h2>Напишите нам</h2>
-    <form action="https://echo.htmlacademy.ru" method="post">
-      <div>
+    <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+      <div class="modal-item">
         <label for="name">Ваше имя:</label>
         <input id="name" type="text" name="name" placeholder="Имя Фамилия">
       </div>
-      <div>
+      <div class="modal-item">
         <label for="email">Ваш e-mail:</label>
         <input id="email" type="email" name="email" placeholder="email@example.com">
       </div>
-      <div>
+      <div class="modal-item">
         <label for="message">Текст письма:</label>
         <textarea id="message" name="message" placeholder="В свободной форме"></textarea>
       </div>
-      <button type="submit">Отправить</button>
+      <button class="button" type="submit">Отправить</button>
     </form>
-    <button type="button">Закрыть</button>
+    <button class="modal-close" type="button">Закрыть</button>
   </section>
 
 </body>
