--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="img/svg/nerds-logo.svg" width="160" height="66" alt="">
       </a>
       <ul class="site-navigation">
-        <li><a href="index.html">Студия</a></li>
+        <li class="site-navigation-current"><a href="index.html">Студия</a></li>
         <li><a href="blank.html">Клиенты</a></li>
         <li><a href="catalog.html">Магазин</a></li>
         <li><a href="blank.html">Контакты</a></li>
